[tool.poetry]
name = "rest-client"
version = "0.1.0"
description = "rest client for testing with log"
authors = ["Kristina Pylzy <kovengor@gmail.com>"]
readme = "README.md"
packages = [{include = 'restclient'}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.28.1"
curlify2 = "^2.0.0"
structlog = "^25.5.0"
asyncio = "^4.0.0"
allure-pytest = "^2.15.2"
uuid = "^1.30"
swagger-coverage = {url = "https://github.com/Morrhat/swagger-coverage-py/archive/refs/heads/master.zip"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
